add home.html template for home state. add users controller for client.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -13,5 +13,5 @@
 
       </div>
     </div>
-    <!-- <div class="parallax"><img src="img/thinman.jpg" alt="Unsplashed background img 1"></div> -->
+    <!-- <div class="parallax"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Poster_-_Thin_Man%2C_The_02.jpg" alt="Unsplashed background img 1"></div> -->
   </div>
