1. build channel.dataservice.js to persist current channel data. 2. configure controllers and views to show an index of channels and individual channels.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -7,7 +7,7 @@
           <h5 class="header col s12 light">Make webTV your own</h5>
         </div>
         <div class="row center">
-          <a href="channels.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Browse Channels</a>
+          <a ui-sref="channels" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Browse Channels</a>
         </div>
         <br><br>
 
