clean up channel.dataservice.js file

--- a/client/templates/channel.html
+++ b/client/templates/channel.html
@@ -11,7 +11,7 @@
     </ul>
   </div>
   </nav>
-  <div class="container-image"><img src="{{chan.imageUrl}}"></div>
+  <div class="container-image"><img src={{chan.imageUrl}}></div>
   <h2>{{chan.name}}</h2>
   <p>{{chan.description}}</p>
 </div>
