--- a/client/templates/channels.html
+++ b/client/templates/channels.html
@@ -1,5 +1,15 @@
 
 <div class="container">
+<nav>
+  <div class="nav-wrapper">
+    <ul>
+      <li><a ui-sref="home">Back</a></li>
+      <li><a ui-sref="addchannel">Add Channel</a></li>
+      <li><a>Delete Channel</a></li>
+    </ul>
+  </div>
+  </nav>
+
   <ul id="channels" class="collection with-header">
     <li class="collection-header"><h4>Channels</h4></li>
     <li class="collection-item" ng-repeat="channel in channels">
