configure app to show channels and allow user to add channels

--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginController">
+<div ng-controller="LoginController" class="container">
   <br><h3>Welcome to <em>Film Avatar</em></h3>
   <div class="cen-jus" ng-hide="isLoggedIn()">
     <p>Please
