1. Add authService to ng ChannelsController. 2. Limit certain buttons on channels.html template navigation to logged-in users"

--- a/client/templates/channels.html
+++ b/client/templates/channels.html
@@ -4,8 +4,13 @@
   <div class="nav-wrapper">
     <ul>
       <li><a ui-sref="home">Back</a></li>
+
+      <!-- buttons for logged-in users: -->
+      <div ng-show="isLoggedIn()">
       <li><a ui-sref="addchannel">Add Channel</a></li>
       <li><a>Delete Channel</a></li>
+      </div>
+
     </ul>
   </div>
   </nav>
