--- a/client/templates/channel.html
+++ b/client/templates/channel.html
@@ -5,9 +5,8 @@
   <div class="nav-wrapper">
     <ul>
       <li><a ui-sref="channels">Back</a></li>
-      <li><a>Edit Channel</a></li>
+      <!-- <li><a>Edit Channel</a></li> -->
       <li ng-click="deleteChannel()"><a>Delete Channel</a></li>
-      <!-- <li><a ng-click="deleteChannel({{chan._id}})">Delete Channel</a></li> -->
       <li><a>See Videos In This Channel</a></li>
     </ul>
   </div>
