Create controller functions, state, links, and view to see a list of videos in each channel.

--- a/client/templates/channel.html
+++ b/client/templates/channel.html
@@ -7,7 +7,7 @@
       <li><a ui-sref="channels">Back</a></li>
       <!-- <li><a>Edit Channel</a></li> -->
       <li ng-click="deleteChannel()"><a>Delete Channel</a></li>
-      <li><a>See Videos In This Channel</a></li>
+      <li><a ui-sref="videos">See Videos In This Channel</a></li>
     </ul>
   </div>
   </nav>
