--- a/client/templates/videos.html
+++ b/client/templates/videos.html
@@ -17,7 +17,7 @@
   <ul id="videos" class="collection with-header">
     <li class="collection-header"><h4>Videos in {{chan.name}}</h4></li>
     <li class="collection-item" ng-repeat="video in videos">
-      <p class="waves-effect" ng-click=""> {{video.title}}</p>
+      <p class="waves-effect" ng-click="getVideo(video)">{{video.title}}</p>
     </li>
   </ul>
   <div >
