clean up video.html a bit

--- a/client/templates/video.html
+++ b/client/templates/video.html
@@ -22,7 +22,7 @@
 </div> -->
 
   <div id="player">
-  <video id="myVideo" ng-src="{{currentVideoUrl}}" controls width="600px">
+  <video id="myVideo" ng-src="{{currentVideoUrl}}" controls width="600px" autoplay="true">
   </video>
   <!-- <div id="videoControls">
     <button id="playpausebtn">pause</button>
