--- a/client/templates/newvideoadded.html
+++ b/client/templates/newvideoadded.html
@@ -4,7 +4,7 @@
     <ul>
       <li><a ui-sref="home">Home</a></li>
       <li><a ui-sref="channels">See All Channels List</a></li>
-      <li><a ui-sref="channel">Back to Channel {{chan}}</a></li>
+      <li><a ui-sref="channel">Back to Channel {{chan.name}}</a></li>
     </ul>
   </div>
   </nav>
