1. Add X buttons to delete videos. 2. clean up old code and debugging code from files. 3. update README.md 4. Configure delete video functionality on server and client side. 5. Add key for users to differentiate delete buttons from clickable titles.

--- a/client/templates/channel.html
+++ b/client/templates/channel.html
@@ -8,7 +8,7 @@
       <!-- <li><a>Edit Channel</a></li> -->
       <li ng-click="deleteChannel()"><a>Delete Channel</a></li>
       <li><a ui-sref="videos">See Videos In This Channel</a></li>
-      <li><a ui-sref="newvideo">Add New Video</a></li>
+      <div ng-show="isLoggedIn()"><li><a ui-sref="newvideo">Add New Video</a></li></div>
     </ul>
   </div>
   </nav>
