--- a/client/css/style.css
+++ b/client/css/style.css
@@ -61,3 +61,17 @@ footer.page-footer {
   width: 300px;
   float: left;
 }
+
+#bgimage {
+  opacity: 0.1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
