--- a/client/css/style.css
+++ b/client/css/style.css
@@ -69,9 +69,31 @@ footer.page-footer {
   bottom: 0;
   right: 0;
   position: fixed;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
+  /*height: 100%;*/
+
   z-index: -1;
 }
 
+#bgimage img {
+  width: 1500px;
+}
 
+#hometitle {
+  text-align: center;
+  top: 10%;
+}
+
+#hometitle h2 {
+  font-family: 'Raleway';
+  color: #2E2E2E;
+}
+
+#hometitle h1 {
+  font-family: 'Maven Pro';
+  color: darkblue;
+}
+
+#down-button {
+  color: #DF3A01;
+}
