--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,12 +2,15 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Welcome to Film Avatar</h1>
+        <div id="hometitle">
+          <h2 >Welcome to</h2>
+          <h1><b>FILM AVATAR<b></h1>
+        </div>
         <div class="row center">
           <h5 class="header col s12 light">Make webTV your own</h5>
         </div>
-        <div class="row center">
-          <a ui-sref="channels" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Browse Channels</a>
+        <div class="row center" id="down-button">
+          <a ui-sref="channels" id="download-button" class="btn-large waves-effect waves-light red lighten-1">Browse Channels</a>
         </div>
         <br><br>
 
